feat: add license and fix version

--- a/package.json
+++ b/package.json
@@ -1,42 +1,44 @@
 {
-  "name": "fish-tui-gum",
-  "displayName": "Gum",
-  "description": "Gum support",
-  "version": "0.0.1",
-  "publisher": "EmilyGraceSeville7cf",
-  "icon": "logo.jpg",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/EmilyGraceSeville7cf/fish-tui-gum.git"
-  },
-  "engines": {
-    "vscode": "^1.92.0"
-  },
-  "categories": [
-    "Other"
-  ],
-  "activationEvents": [
-    "onLanguage:fish"
-  ],
-  "main": "./extension.js",
-  "contributes": {
-    "commands": [{
-      "command": "fish-tui-gum.helloWorld",
-      "title": "Hello World"
-    }]
-  },
-  "scripts": {
-    "lint": "eslint .",
-    "pretest": "npm run lint",
-    "test": "vscode-test"
-  },
-  "devDependencies": {
-    "@types/vscode": "^1.92.0",
-    "@types/mocha": "^10.0.7",
-    "@types/node": "20.x",
-    "eslint": "^8.57.0",
-    "typescript": "^5.4.5",
-    "@vscode/test-cli": "^0.0.9",
-    "@vscode/test-electron": "^2.4.0"
-  }
+    "name": "fish-tui-gum",
+    "displayName": "Gum",
+    "description": "Gum support",
+    "version": "1.0.0",
+    "publisher": "EmilyGraceSeville7cf",
+    "icon": "logo.jpg",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/EmilyGraceSeville7cf/fish-tui-gum.git"
+    },
+    "engines": {
+        "vscode": "^1.92.0"
+    },
+    "categories": [
+        "Other"
+    ],
+    "activationEvents": [
+        "onLanguage:fish"
+    ],
+    "main": "./extension.js",
+    "contributes": {
+        "commands": [
+            {
+                "command": "fish-tui-gum.helloWorld",
+                "title": "Hello World"
+            }
+        ]
+    },
+    "scripts": {
+        "lint": "eslint .",
+        "pretest": "npm run lint",
+        "test": "vscode-test"
+    },
+    "devDependencies": {
+        "@types/vscode": "^1.92.0",
+        "@types/mocha": "^10.0.7",
+        "@types/node": "20.x",
+        "eslint": "^8.57.0",
+        "typescript": "^5.4.5",
+        "@vscode/test-cli": "^0.0.9",
+        "@vscode/test-electron": "^2.4.0"
+    }
 }
