feat(config): specify required node version

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "url": "https://github.com/EmilyGraceSeville7cf/fish-tui-gum.git"
     },
     "engines": {
-        "vscode": "^1.92.0"
+        "vscode": "^1.92.0",
+        "node": ">=20.11.1"
     },
     "categories": [
         "Other",
@@ -45,7 +46,8 @@
         "typescript": "^5.4.5"
     },
     "dependencies": {
-        "@sinclair/typebox": "^0.33.7"
+        "@sinclair/typebox": "^0.33.7",
+        "@types/eslint": "^9.6.1"
     },
     "prettier": {
         "trailingComma": "none",
